# r-top

./: .gitignore  Cargo.toml  LICENSE  README.md
example-services/: basic_template.toml  database_backup.toml  docker_container.toml  file_sync.toml  log_file_monitor.toml  py_venv.toml  web_application.toml
r-top-linux-aarch64/: r-top
r-top-linux-armv7/: r-top
r-top-linux-x86_64/: r-top
src/: app_state.rs  constants.rs  daemon.rs  event_handler.rs  main  main.rs  system_info.rs  theme.rs  types.rs  ui.rs  utils.rs
