[package]
name = "b-top"
version = "0.1.3"
edition = "2024"

[dependencies]
prompted = "0.2.8"

ratatui = "0.29"
crossterm = "0.29"
tachyonfx = "0.15"
sysinfo = "0.36"

textplots = "0.8"

libc = "0.2"

clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
dirs = "6.0"

ctrlc = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"
libc = "0.2"